--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -210,3 +210,4 @@ write_interpretation=Write interpretation
 embed_in_web_page=Embed in web page
 favorite_link=Favorite link
 api_link=API link
+rewind_one_period=Rewind one period
