--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -211,3 +211,4 @@ embed_in_web_page=Embed in web page
 favorite_link=Favorite link
 api_link=API link
 rewind_one_period=Rewind one period
+open_favorite=Open favorite
