--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -212,3 +212,5 @@ favorite_link=Favorite link
 api_link=API link
 rewind_one_period=Rewind one period
 open_favorite=Open favorite
+last_updated=Last updated
+name=Name
