--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -214,3 +214,4 @@ rewind_one_period=Rewind one period
 open_favorite=Open favorite
 last_updated=Last updated
 name=Name
+save_favorite_as=Save favorite as
