--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -215,3 +215,5 @@ open_favorite=Open favorite
 last_updated=Last updated
 name=Name
 save_favorite_as=Save favorite as
+you_have_unsaved_changes_discard=You have unsaved changes. Discard?
+favorite_name_exists_replace=A favorite with this name already exists. Do you want to replace it?
