Translations for months_this_year/quarters_this_year

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -60,12 +60,14 @@ months=Meses
 last_month=\u00DAltimo mes
 last_3_months=\u00DAltimos 3 meses
 last_12_months=\u00DAltimos 12 meses
+months_this_year=Meses de este a\u00F1o
 bimonths=Dos meses
 last_bimonth=\u00DAltimos 2 meses
 last_6_bimonths=\u00DAltimos 6 "dos meses"
 quarters=Trimestres
 last_quarter=\u00DAltimo trimestre
 last_4_quarters=\u00DAltimos 4 trimestres
+quarters_this_year=Trimestres de este a\u00F1o
 sixmonths=Semestre
 last_sixmonth=\u00DAltimo semestre
 last_2_sixmonths=\u00DAltimos 2 semestres
