--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -61,12 +61,14 @@ months=Mois
 last_month=Mois pass\u00E9
 last_3_months=3 derniers mois
 last_12_months=12 derniers mois
+months_this_year=Mois cette ann\u00E9e
 bimonths=Bimestre
 last_bimonth=Bimestre pass\u00E9
 last_6_bimonths=6 derniers bimestres
 quarters=Trimestres
 last_quarter=Trimestre pass\u00E9
 last_4_quarters=4 derniers trimestres
+quarters_this_year=Quarters cette ann\u00E9e
 sixmonths=Semestres
 last_sixmonth=Semestre pass\u00E9
 last_2_sixmonths=2 derniers semestres
