--- a/i18n/i18n_app_lo.properties
+++ b/i18n/i18n_app_lo.properties
@@ -61,12 +61,14 @@ months=\u0EC0\u0E94\u0EB7\u0EAD\u0E99
 last_month=\u0EC0\u0E94\u0EB7\u0EAD\u0E99\u0E9C\u0EC8\u0EB2\u0E99\u0EA1\u0EB2
 last_3_months=3 \u0EC0\u0E94\u0EB7\u0EAD\u0E99\u0E9C\u0EC8\u0EB2\u0E99\u0EA1\u0EB2
 last_12_months=12 \u0EC0\u0E94\u0EB7\u0EAD\u0E99\u0E9C\u0EC8\u0EB2\u0E99\u0EA1\u0EB2
+months_this_year=\u0EC0\u0E94\u0EB7\u0EAD\u0E99\u0EC3\u0E99\u0E9B\u0EB5\u0E99\u0EB5\u0EC9
 bimonths=\u0EC0\u0E84\u0EB4\u0EC8\u0E87\u0EC0\u0E94\u0EB7\u0EAD\u0E99
 last_bimonth=Last bi-month
 last_6_bimonths=Last 6 bi-months
 quarters=Quarters
 last_quarter=Last quarter
 last_4_quarters=Last 4 quarters
+quarters_this_year=\u0EC4\u0E95\u0EA1\u0EB2\u0E94\u0E9B\u0EB5\u0E99\u0EB5\u0EC9
 sixmonths=Six-months
 last_sixmonth=6 \u0EC0\u0E94\u0EB7\u0EAD\u0E99\u0E9C\u0EC8\u0EB2\u0E99\u0EA1\u0EB2
 last_2_sixmonths=Last 2 six-months
