--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -228,3 +228,5 @@ discard=Discard
 replace=Replace
 average=Average
 all_metrics=All metrics
+reporting_rates_on_time=Reporting rates on time
+actual_reports_on_time=Actual reporting rates on time
