--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -61,6 +61,8 @@ last_month=\u00DAltimo mes
 last_3_months=\u00DAltimos 3 meses
 last_12_months=\u00DAltimos 12 meses
 months_this_year=Meses de este a\u00F1o
+weeks_this_year=Semanas de este a\u00F1o
+bimonths_this_year="Dos meses" de este a\u00F1o
 bimonths=Dos meses
 last_bimonth=\u00DAltimos 2 meses
 last_6_bimonths=\u00DAltimos 6 "dos meses"
