--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -62,6 +62,8 @@ last_month=Mois pass\u00E9
 last_3_months=3 derniers mois
 last_12_months=12 derniers mois
 months_this_year=Mois cette ann\u00E9e
+weeks_this_year=Semaines cette ann\u00E9e
+bimonths_this_year=Bimestres cette ann\u00E9e
 bimonths=Bimestre
 last_bimonth=Bimestre pass\u00E9
 last_6_bimonths=6 derniers bimestres
