--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -97,6 +97,8 @@ include_cumulative=Incluir somat\u00F3rios
 periods=Per\u00EDodos
 last_12_months=\u00DAltimos 12 meses
 months_this_year=Meses deste ano
+weeks_this_year=Semanas deste ano
+bimonths_this_year=Bi-mensal deste ano
 for_standard_reports_only=Apenas para relat\u00F3rios padr\u00E3o
 legend_set=Conjunto de legendas
 financial_years=Anos financeiros
