--- a/i18n/i18n_app_tg.properties
+++ b/i18n/i18n_app_tg.properties
@@ -1,4 +1,4 @@
-﻿dimensions = \u0410\u043D\u0434\u043E\u0437\u0430\u04B3\u043E
+\uFEFFdimensions = \u0410\u043D\u0434\u043E\u0437\u0430\u04B3\u043E
 row = \u0421\u0430\u0442\u0440
 column = \u0421\u0443\u0442\u0443\u043D
 filter = \u0424\u0438\u043B\u0442\u0440
@@ -65,6 +65,8 @@ last_month = \u041C\u043E\u04B3\u0438 \u0433\u0443\u0437\u0430\u0448\u0442\u0430
 last_3_months = 3 \u043C\u043E\u04B3\u0438 \u043E\u0445\u0438\u0440
 last_12_months = 12 \u043C\u043E\u04B3\u0438 \u043E\u0445\u0438\u0440
 months_this_year=\u041C\u043E\u04B3 \u0438\u043D \u0441\u043E\u043B
+weeks_this_year=\u04B2\u0430\u0444\u0442\u0430 \u0440\u0430\u0432\u043E\u043D
+bimonths_this_year=2 \u043C\u043E\u04B3\u0438 \u0441\u043E\u043B\u0438 \u0440\u0430\u0432\u043E\u043D
 bimonths = \u0414\u0443\u043C\u043E\u04B3\u0430\u04B3\u043E
 last_bimonth = \u0414\u0443\u043C\u043E\u04B3\u0430\u0438 \u043E\u0445\u0438\u0440
 last_6_bimonths = 6 \u0434\u0443\u043C\u043E\u04B3\u0430\u0438 \u043E\u0445\u0438\u0440
