--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -62,6 +62,8 @@ last_month=Th\u00E1ng tr\u01B0\u1EDBc
 last_3_months=3 th\u00E1ng tr\u01B0\u1EDBc
 last_12_months=12 th\u00E1ng tr\u01B0\u1EDBc
 months_this_year=Th\u00E1ng n\u0103m nay
+weeks_this_year=Tu\u1EA7n trong n\u0103m nay
+bimonths_this_year=2 th\u00E1ng \u0111\u1EA7u n\u0103m nay
 bimonths=Hai th\u00E1ng
 last_bimonth=Hai th\u00E1ng tr\u01B0\u1EDBc
 last_6_bimonths=6 \u0111\u1EE3t 2 th\u00E1ng tr\u01B0\u1EDBc
