--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -230,3 +230,10 @@ average=Average
 all_metrics=All metrics
 reporting_rates_on_time=Reporting rates on time
 actual_reports_on_time=Actual reporting rates on time
+leave_application=Leave application
+new_favorite=New favorite
+save_favorite=Save favorite
+delete_favorite=Delete favorite
+all_unsaved_changes_will_be_discarded_continue=All unsaved changes will be discarded. Continue?
+existing_favorite_will_be_replaced_continue=Existing favorite will be replaced. Continue?
+this_favorite_will_be_deleted_continue=This favorite will be deleted. Continue?
