--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -230,3 +230,4 @@ average=Average
 all_metrics=All metrics
 reporting_rates_on_time=Reporting rates on time
 actual_reports_on_time=Actual reporting rates on time
+untitled=Untitled
