Updating Vietnamese translations.

--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -193,3 +193,41 @@ build_time=Th\u1EDDi gian x\u00E2y d\u1EF1ng
 username=T\u00EAn truy c\u1EADp
 error=L\u1ED7i
 warning=C\u1EA3nh b\u00E1o
+data_approved_at_level=D\u1EEF li\u1EC7u \u0111\u00E3 \u0111\u01B0\u1EE3c ph\u00EA duy\u1EC7t \u1EDF c\u1EA5p \u0111\u1ED9
+show_all_data=Hi\u1EC3n th\u1ECB t\u1EA5t c\u1EA3 d\u1EEF li\u1EC7u
+event_data_items=Danh m\u1EE5c d\u1EEF li\u1EC7u s\u1EF1 ki\u1EC7n
+program_indicators=Ch\u1EC9 s\u1ED1 ch\u01B0\u01A1ng tr\u00ECnh
+program=Ch\u01B0\u01A1ng tr\u00ECnh 
+select_program=Ch\u1ECDn ch\u01B0\u01A1ng tr\u00ECnh
+completed_only=\u0110\u01B0\u1EE3c ho\u00E0n th\u00E0nh b\u1EDFi
+events=S\u1EF1 ki\u1EC7n
+include_only_completed_events_only=Ch\u1EC9 bao g\u1ED3m c\u00E1c s\u1EF1 ki\u1EC7n \u0111\u00E3 ho\u00E0n th\u00E0nh
+comma=D\u1EA5u ph\u1EA9y
+space=D\u1EA5u c\u00E1ch
+download_data=T\u1EA3i d\u1EEF li\u1EC7u v\u1EC1
+skip_rounding=Kh\u00F4ng l\u00E0m tr\u00F2n
+write_interpretation=Vi\u1EBFt di\u1EC5n gi\u1EA3i
+embed_in_web_page=Tr\u00E8n v\u00E0o trang web
+favorite_link=\u0110\u01B0\u1EDDng d\u1EABn b\u00E1o c\u00E1o
+api_link=\u0110\u01B0\u1EDDng d\u1EABn API
+rewind_one_period=L\u00F9i l\u1EA1i m\u1ED9t th\u1EDDi \u0111i\u1EC3m
+open_favorite=M\u1EDF b\u00E1o c\u00E1o \u0111\u00E3 l\u01B0u
+last_updated=C\u1EADp nh\u1EADt l\u1EA7n cu\u1ED1i
+name=T\u00EAn
+save_favorite_as=L\u01B0u b\u00E1o c\u00E1o l\u1EA1i
+you_have_unsaved_changes_discard=H\u1EE7y l\u01B0u thay \u0111\u1ED5i?
+favorite_name_exists_replace=Thay \u0111\u1ED5i b\u00E1o c\u00E1o c\u0169?
+delete_this_favorite=X\u00F3a b\u00E1o c\u00E1o?
+new_=M\u1EDBi
+open=M\u1EDF
+save_as=L\u01B0u th\u00E0nh
+get_link=L\u1EA5y \u0111\u01B0\u1EDDng d\u1EABn
+embed=Tr\u00E8n
+discard_changes=B\u1ECF thay \u0111\u1ED5i
+discard=H\u1EE7y b\u1ECF
+replace=Thay th\u1EBF
+average=Trung b\u00ECnh
+all_metrics=T\u1EA5t c\u1EA3 ma tr\u1EADn
+reporting_rates_on_time=T\u1EC9 l\u1EC7 b\u00E1o c\u00E1o \u0111\u00FAng h\u1EA1n
+actual_reports_on_time=B\u00E1o c\u00E1o \u0111\u00FAng h\u1EA1n th\u1EF1c t\u1EBF
+untitled=Ch\u01B0a \u0111\u1EB7t t\u00EAn
