--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -236,3 +236,5 @@ all_unsaved_changes_will_be_discarded_continue=All unsaved changes will be disca
 existing_favorite_will_be_replaced_continue=Existing favorite will be replaced. Continue?
 this_favorite_will_be_deleted_continue=This favorite will be deleted. Continue?
 untitled=Untitled
+title=Title
+description=Description
