--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -238,3 +238,8 @@ this_favorite_will_be_deleted_continue=This favorite will be deleted. Continue?
 untitled=Untitled
 title=Title
 description=Description
+unnamed=Unnamed
+no_title=No title
+no_description=No description
+show_favorites=Show favorites
+hide_favorites=Hide favorites
