--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -243,3 +243,29 @@ no_title=No title
 no_description=No description
 show_favorites=Show favorites
 hide_favorites=Hide favorites
+more=more
+less=less
+change=change
+public=Public
+read=Read
+read_write=Read/Write
+groups=groups
+group=Group
+owner=Owner
+created=Created
+number_of_views=Number of views
+retrieving_number_of_views=Retrieving number of views...
+sharing=Sharing
+no_current_favorite=No current favorite
+post_comment=Post Comment
+more_comments=more comments
+unlike=Unlike
+like=Like
+people_like_this=people like this
+people_commented=people commented
+back_to_today=Back to today
+no_interpretations=No interpretations
+interpretations=Interpretations
+comment=Comment
+people=people
+like_this=like this
