--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -243,3 +243,6 @@ no_title=No title
 no_description=No description
 show_favorites=Show favorites
 hide_favorites=Hide favorites
+advanced=Advanced
+data_value_set=Data value set
+raw_data=Raw data
