--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -246,3 +246,31 @@ hide_favorites=Hide favorites
 advanced=Advanced
 data_value_set=Data value set
 raw_data=Raw data
+show_more=Show more
+show_less=Show less
+edit=Edit
+change=change
+public=Public
+read=Read
+read_write=Read/Write
+groups=groups
+group=Group
+owner=Owner
+created=Created
+number_of_views=Number of views
+retrieving_number_of_views=Retrieving number of views...
+sharing=Sharing
+no_current_favorite=No current favorite
+post_comment=Post Comment
+more_comments=more comments
+unlike=Unlike
+like=Like
+people_like_this=people like this
+people_commented=people commented
+back_to_today=Back to today
+no_interpretations=No interpretations
+interpretations=Interpretations
+comment=Comment
+people=people
+like_this=like this
+ago=ago
