table title option

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -276,3 +276,5 @@ like_this=like this
 ago=ago
 loading=Loading
 clear_interpretation=Clear interpretation
+general=General
+table_title=Table title
