--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -280,3 +280,7 @@ general=General
 table_title=Table title
 translate=Translate
 select_locale=Select locale
+no_translation_for_name=No translation for name
+no_translation_for_title=No translation for title
+no_translation_for_description=No translation for description
+select_a_locale_to_enter_translations_for=Selec a locale to enter translations for
