--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -120,6 +120,7 @@ share=Share
 interpretation=interpretation
 write_your_interpretation=Write a comment, question or interpretation
 legend_set=Legend set
+legend_colorize_target=Legend colorize target
 select_organisation_units=Select organisation units
 select_boundaries_and_levels=Select boundaries and levels
 select_organisation_unit_levels=Select organisation unit levels
@@ -284,3 +285,6 @@ no_translation_for_name=No translation for name
 no_translation_for_title=No translation for title
 no_translation_for_description=No translation for description
 select_a_locale_to_enter_translations_for=Select a locale to enter translations for
+value=Value
+background=Background
+legend_display_style=Legend display style
