--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -286,5 +286,6 @@ no_translation_for_title=No translation for title
 no_translation_for_description=No translation for description
 select_a_locale_to_enter_translations_for=Select a locale to enter translations for
 value=Value
-background=Background
 legend_display_style=Legend display style
+background_color=Background color
+text_color=Text color
