Updating Spanish translations.

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -2,16 +2,17 @@ dimensions=Dimensiones
 row=Fila
 column=Columna
 filter=Filtro
-table_layout=Dise\u00F1o de tabla
+table_layout=Disposici\u00F3n de tabla
 show_subtotals=Mostrar sub-totales
 hide_empty_rows=Ocultar filas vac\u00EDas
 display_density=Mostrar densidad
 font_size=Tama\u00F1o de fuente
-digit_group_separator=D\u00EDgito separador de grupos
+digit_group_separator=Separador de d\u00EDgitos de grupo
 comfortable=C\u00F3modo
 compact=Compacto
 large=Grande
 small_=Peque\u00F1o
+normal=Normal
 reporting_period=Periodo de reporte
 organisation_unit=Unidad organizativa
 organisation_units=Unidades organizativas
@@ -27,14 +28,14 @@ hide=Ocultar
 add_new=A\u00F1adir nuevo
 manage_favorites=Administrar favoritos
 search_for_favorites=Buscar favoritos
-overwrite_favorite=Sobrescribir favoritos
+overwrite_favorite=Sobreescribir favoritos
 delete_favorite=Eliminar favorito
 prev=Anterior
 next=Siguiente
 rename=Renombrar
-overwrite=Sobrescribir
+overwrite=Sobreescribir
 share_with_other_people=Compartir con otros
-sharing_settings=Configuraci\u00F3n de elementos compartidos
+sharing_settings=Configuraci\u00F3n de compartici\u00F3n
 can_view=Se puede ver
 can_edit_and_view=Se puede editar y ver
 none=Ninguno
@@ -49,7 +50,7 @@ data_elements=Elementos de datos
 all_data_element_groups=Todos los grupos de elementos de datos
 select_data_element_group=Seleccione grupo de elementos de datos
 data_sets=Sets de datos
-reporting_rates=Tasas de notificaci\u00F3n
+reporting_rates=Estad\u00EDsticas de reportes
 periods=Periodos
 select_period_type=Seleccione tipo de periodo
 weeks=Semanas
@@ -60,9 +61,9 @@ months=Meses
 last_month=\u00DAltimo mes
 last_3_months=\u00DAltimos 3 meses
 last_12_months=\u00DAltimos 12 meses
-bimonths=Dos meses
-last_bimonth=\u00DAltimos 2 meses
-last_6_bimonths=\u00DAltimos 6 "dos meses"
+bimonths=Bimestres
+last_bimonth=\u00DAltimo bimestre
+last_6_bimonths=\u00DAltimos 6 bimestres
 quarters=Trimestres
 last_quarter=\u00DAltimo trimestre
 last_4_quarters=\u00DAltimos 4 trimestres
@@ -73,9 +74,9 @@ years=A\u00F1os
 this_year=Este a\u00F1o
 last_year=A\u00F1o pasado
 last_5_years=\u00DAltimos 5 a\u00F1os
-financial_years=Ejercicios econ\u00F3micos
-last_financial_year=\u00DAltimo ejercicio econ\u00F3mico
-last_5_financial_years=\u00DAltimos 5 ejercicios econ\u00F3micos
+financial_years=A\u00F1os fiscales
+last_financial_year=\u00DAltimo a\u00F1o fiscal
+last_5_financial_years=\u00DAltimos 5 a\u00F1os fiscales
 prev_year=A\u00F1o anterior
 next_year=A\u00F1o siguiente
 select_all_children=Seleccionar todos los nodos hijo
@@ -108,7 +109,7 @@ download=Descargar
 favorites=Favoritos
 include_regression=Incluir regresi\u00F3n
 include_cumulative=Incluir acumulado
-sort_order=Criterio de ordenaci\u00F3n
+sort_order=Ordenar
 low_to_high=Menor a mayor
 high_to_low=Mayor a menor
 top_limit=L\u00EDmite superior
@@ -119,10 +120,170 @@ share=Compartir
 interpretation=interpretaci\u00F3n
 write_your_interpretation=Escriba un comentario, pregunta o interpretaci\u00F3n
 legend_set=Set de leyendas
+legend_colorize_target=Colorear la leyenda
 select_organisation_units=Seleccione unidades organizativas
+select_boundaries_and_levels=Seleccione los l\u00EDmites y niveles
+select_organisation_unit_levels=Selecciona los niveles de la unidad organizativa
 totals=Totales
 details=Detalles
+select_boundaries_and_groups=Seleccione los l\u00EDmites y grupos
+select_organisation_unit_groups=Seleccione el grupo de la unidad organizativa
+allow_external_access=Permitir acceso externo
+show_hierarchy=Mostrar jerarqu\u00EDa
+all_indicators=Todos los indicadores
+all_data_elements=Todos los elementos de datos
+daily=Diariamente
+weekly=Semanalmente
+monthly=Mensualmente
+bimonthly=Bimestralmente
+quarterly=Trimestral
+sixmonthly=Semestral
+sixmonthly_april=Semestre Abril
+yearly=Anual
+financial_oct=Fiscal Octubre
+financial_july=Fiscal Julio 
+financial_april=Fiscal Abril 
+plugin_config=Configurar complemento
+default_=Predeterminada
+aggregation_type=Tipo de agregaci\u00F3n
+count=Contar
+sum=Sumar
+by_data_element=Por elemento de datos
+stddev=Desviaci\u00F3n est\u00E1ndar
+variance=Varianza
+go_to_charts=Ir a gr\u00E1ficos
+open_this_table_as_chart=Abrir esta tabla como gr\u00E1fico
+open_last_chart=Abrir \u00FAltimo gr\u00E1fico
+go_to_maps=Ir a mapas
+open_this_table_as_map=Abrir esta tabla como mapa
+open_last_map=Abrir \u00FAltimo mapa
+show_row_totals=Mostrar totales de fila
+show_col_totals=Mostrar totales de columna
+assigned_categories=Categorias asignadas
+show_dimension_labels=Mostrar etiquetas de dimensi\u00F3n
+min=M\u00EDnimo
+max=M\u00E1ximo
+select_sub_units=Seleccionar subunidades
+you_do_not_have_access_to_all_items_in_this_favorite=Usted no tiene acceso a todos los elementos de este favorito
+show=Mostrar
+show_col_subtotals=Mostrar subtotales columna
+show_row_subtotals=Mostrar subtotales de fila
+last_52_weeks=\u00DAltimas 52 semanas
+last_6_months=Los \u00FAltimos 6 meses
+created_by=Creado por
+initializing=Inicializando
+clear_pivot_table=Crear una tabla din\u00E1mica
+this_financial_year=Este a\u00F1o fiscal
+user_sub_units=Usuario subunidades
+user_sub_x2_units=Subunidades de usuario de segundo nivel
+metadata_id_scheme=Identificaci\u00F3n esquema metadatos
+this_week=Esta semana
+this_quarter=Este trimestre
+this_month=Este mes
+this_sixmonth=Este semestre
+this_bimonth=Este bi-mes
+excluded_dimensions=Dimensiones excluidas
+column_dimensions=Dimensiones columna
+row_dimensions=Dimensiones fila
+report_filter=Filtro de informes
+about=acerca de
+time_since_last_data_update=Tiempo desde la \u00FAltima actualizaci\u00F3n de datos
+version=Versi\u00F3n
+revision=Revisi\u00F3n
+build_time=En construcci\u00F3n 
+username=Nombre de usuario
+error=Error
+warning=Advertencia
+data_approved_at_level=Datos aprobados a nivel
+show_all_data=Mostrar todos los datos
+event_data_items=Elementos de datos de eventos
+program_indicators=Indicadores de programa
+program=Programa
+select_program=Seleccionar programa
+completed_only=S\u00F3lo completado
+events=Eventos
+include_only_completed_events_only=Incluir s\u00F3lo los eventos completados
+comma=Coma
+space=Espacio
+download_data=Descarga de datos
+skip_rounding=Saltar redondeo
 write_interpretation=Write interpretation
 embed_in_web_page=Embed in web page
 favorite_link=Favorite link
 api_link=API link
+rewind_one_period=Retroceder\u00E1 un periodo
+open_favorite=Abrir favorito
+last_updated=\u00DAltima actualizaci\u00F3n
+name=Nombre
+save_favorite_as=Guardar favorito como
+you_have_unsaved_changes_discard=\u00BFDescartar los cambios no guardados ?
+favorite_name_exists_replace=\u00BFDesea reemplazar favorito existente ?
+delete_this_favorite=\u00BFBorrar este favorito?
+new_=Nuevo
+open=Abrir
+save_as=Guardar como
+get_link=Obtener enlace 
+embed=Embeber
+replace=Reemplazar
+average=Media
+all_metrics=Todas las m\u00E9tricas
+reporting_rates_on_time=Estad\u00EDsticas de informes en tiempo real
+actual_reports_on_time=Tasas de comunicaci\u00F3n en tiempo real
+leave_application=Deje la aplicaci\u00F3n
+new_favorite=Favorito nuevo
+save_favorite=Guardar favorito
+all_unsaved_changes_will_be_discarded_continue=Se descartar\u00E1n todos los cambios no guardados . \u00BFContinuar?
+existing_favorite_will_be_replaced_continue=favorito existente ser\u00E1 reemplazado . \u00BFContinuar?
+this_favorite_will_be_deleted_continue=Se eliminar\u00E1 este favorito . \u00BFDesea continuar?
+untitled=Sin t\u00EDtulo
+title=Ti\u0301tulo
+description=Descripci\u00F3n
+unnamed=Sin nombre
+no_title=Sin ti\u0301tulo
+no_description=Sin descripci\u00F3n
+show_favorites=Mostrar favoritos
+hide_favorites=Ocultar favoritos
+advanced=Avanzado
+data_value_set=Valor de los datos
+raw_data=Datos brutos
+show_more=Mostrar m\u00E1s
+show_less=Mostrar menos
+edit=Editar
+change=cambiar
+public=P\u00FAblico
+read=Leer
+read_write=Leer/Escribir
+groups=grupos
+group=Grupo
+owner=Propietario
+created=Creado
+views=Vistas
+retrieving_number_of_views=Recuperando el n\u00FAmero de vistas ...
+sharing=Compartiendo
+no_current_favorite=Actualmente ning\u00FAn favorito
+post_comment=Publicar comentario
+more_comments=m\u00E1s comentarios
+unlike=diferente a
+like=como
+people_like_this=gente como esta
+people_commented=personas que comentaron
+back_to_today=De regreso al d\u00EDa de hoy
+no_interpretations=Sin interpretaciones
+interpretations=Interpretaciones
+comment=Comentario
+people=personas
+like_this=como este
+ago=hace
+loading=Cargando
+clear_interpretation=limpiar interpretaci\u00F3n
+general=General
+table_title=T\u00EDtulo de la tabla
+translate=Traducci\u00F3n
+select_locale=Seleccionar idioma
+no_translation_for_name=No hay traducci\u00F3n para el nombre
+no_translation_for_title=No hay traducci\u00F3n para el t\u00EDtulo
+no_translation_for_description=No hay traducci\u00F3n para la descripci\u00F3n
+select_a_locale_to_enter_translations_for=Seleccione una configuraci\u00F3n regional para introducir traducciones
+value=Valor
+background=Fondo
+legend_display_style=Estilo de visualizaci\u00F3n de la leyenda
