Adding Indonesian translations.

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -232,6 +232,7 @@ actual_reports_on_time=Tasas de comunicaci\u00F3n en tiempo real
 leave_application=Deje la aplicaci\u00F3n
 new_favorite=Favorito nuevo
 save_favorite=Guardar favorito
+delete_favorite=Eliminar favorito
 all_unsaved_changes_will_be_discarded_continue=Se descartar\u00E1n todos los cambios no guardados . \u00BFContinuar?
 existing_favorite_will_be_replaced_continue=favorito existente ser\u00E1 reemplazado . \u00BFContinuar?
 this_favorite_will_be_deleted_continue=Se eliminar\u00E1 este favorito . \u00BFDesea continuar?
