--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -103,7 +103,7 @@ example5=Working with a pivot table
 example6=Click Options to hide sub-totals or empty rows, adjust font size and more
 example7=Click Favorites to save your table for later use
 example8=Click Download to save table data to your computer
-example9=Top 5 favorites
+example9=Most viewed favorites
 layout=Layout
 options=Options
 download=Download
