Locales for download dropdown separator

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -246,6 +246,7 @@ show_favorites=Show favorites
 hide_favorites=Hide favorites
 advanced=Advanced
 data_value_set=Data value set
+other_formats=Other formats
 raw_data=Raw data
 show_more=Show more
 show_less=Show less
