Updating ES/PT translations.

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -8,10 +8,10 @@ hide_empty_rows=Ocultar filas vac\u00EDas
 display_density=Mostrar densidad
 font_size=Tama\u00F1o de fuente
 digit_group_separator=Separador de d\u00EDgitos de grupo
-comfortable=C\u00F3modo
+comfortable=Confortable
 compact=Compacto
 large=Grande
-small_=Peque\u00F1o
+small_=Peque\u00F1a
 normal=Normal
 reporting_period=Periodo de reporte
 organisation_unit=Unidad organizativa
@@ -50,7 +50,7 @@ data_elements=Elementos de datos
 all_data_element_groups=Todos los grupos de elementos de datos
 select_data_element_group=Seleccione grupo de elementos de datos
 data_sets=Sets de datos
-reporting_rates=Estad\u00EDsticas de reportes
+reporting_rates=Tasas de Informes
 periods=Periodos
 select_period_type=Seleccione tipo de periodo
 weeks=Semanas
@@ -65,8 +65,8 @@ bimonths=Bimestres
 last_bimonth=\u00DAltimo bimestre
 last_6_bimonths=\u00DAltimos 6 bimestres
 quarters=Trimestres
-last_quarter=\u00DAltimo trimestre
-last_4_quarters=\u00DAltimos 4 trimestres
+last_quarter=El trimestre pasado
+last_4_quarters=Los \u00FAltimos 4 trimestres
 sixmonths=Semestre
 last_sixmonth=\u00DAltimo semestre
 last_2_sixmonths=\u00DAltimos 2 semestres
@@ -98,7 +98,7 @@ at_least_one_period_must_be_specified_as_column_row_or_filter=Se debe especifica
 example1=Creando tabla din\u00E1mica
 example2=Seleccione elementos de cualquiera de las dimensiones del men\u00FA de la izquierda
 example3=Hacer clic en Dise\u00F1o para organizar las dimensiones en las filas y columnas de la tabla
-example4=Pulse Actualizar para crear la tabla
+example4=Seleccione Actualizar para crear su tabla
 example5=Trabajando con una tabla din\u00E1mica
 example6=Haga clic en Opciones para ocultar sub-totales o filas vac\u00EDas, ajustar el tama\u00F1o de la fuente y m\u00E1s
 example7=Haga clic en favoritos para guardar la tabla para uso posterior
@@ -109,7 +109,7 @@ download=Descargar
 favorites=Favoritos
 include_regression=Incluir regresi\u00F3n
 include_cumulative=Incluir acumulado
-sort_order=Ordenar
+sort_order=Orden de clasificaci\u00F3n
 low_to_high=Menor a mayor
 high_to_low=Mayor a menor
 top_limit=L\u00EDmite superior
@@ -127,27 +127,27 @@ select_organisation_unit_levels=Selecciona los niveles de la unidad organizativa
 totals=Totales
 details=Detalles
 select_boundaries_and_groups=Seleccione los l\u00EDmites y grupos
-select_organisation_unit_groups=Seleccione el grupo de la unidad organizativa
+select_organisation_unit_groups=Seleccione los grupos de la unidad organizativa
 allow_external_access=Permitir acceso externo
 show_hierarchy=Mostrar jerarqu\u00EDa
 all_indicators=Todos los indicadores
 all_data_elements=Todos los elementos de datos
-daily=Diariamente
-weekly=Semanalmente
-monthly=Mensualmente
-bimonthly=Bimestralmente
+daily=Diario
+weekly=Semanal
+monthly=Mensual
+bimonthly=Bimestral
 quarterly=Trimestral
 sixmonthly=Semestral
 sixmonthly_april=Semestre Abril
 yearly=Anual
-financial_oct=Fiscal Octubre
-financial_july=Fiscal Julio 
-financial_april=Fiscal Abril 
+financial_oct=Financiero Octubre
+financial_july=Financiero Julio
+financial_april=Financiero Abril
 plugin_config=Configurar complemento
 default_=Predeterminada
 aggregation_type=Tipo de agregaci\u00F3n
-count=Contar
-sum=Sumar
+count=Conteo
+sum=Suma
 by_data_element=Por elemento de datos
 stddev=Desviaci\u00F3n est\u00E1ndar
 variance=Varianza
@@ -159,14 +159,14 @@ open_this_table_as_map=Abrir esta tabla como mapa
 open_last_map=Abrir \u00FAltimo mapa
 show_row_totals=Mostrar totales de fila
 show_col_totals=Mostrar totales de columna
-assigned_categories=Categorias asignadas
+assigned_categories=Categor\u00EDas asignadas
 show_dimension_labels=Mostrar etiquetas de dimensi\u00F3n
 min=M\u00EDnimo
 max=M\u00E1ximo
 select_sub_units=Seleccionar subunidades
 you_do_not_have_access_to_all_items_in_this_favorite=Usted no tiene acceso a todos los elementos de este favorito
 show=Mostrar
-show_col_subtotals=Mostrar subtotales columna
+show_col_subtotals=Mostrar subtotales de columna
 show_row_subtotals=Mostrar subtotales de fila
 last_52_weeks=\u00DAltimas 52 semanas
 last_6_months=Los \u00FAltimos 6 meses
@@ -174,8 +174,8 @@ created_by=Creado por
 initializing=Inicializando
 clear_pivot_table=Crear una tabla din\u00E1mica
 this_financial_year=Este a\u00F1o fiscal
-user_sub_units=Usuario subunidades
-user_sub_x2_units=Subunidades de usuario de segundo nivel
+user_sub_units=Subunidades de usuario
+user_sub_x2_units=Subunidades x2 de usuario
 metadata_id_scheme=Identificaci\u00F3n esquema metadatos
 this_week=Esta semana
 this_quarter=Este trimestre
@@ -183,11 +183,11 @@ this_month=Este mes
 this_sixmonth=Este semestre
 this_bimonth=Este bi-mes
 excluded_dimensions=Dimensiones excluidas
-column_dimensions=Dimensiones columna
-row_dimensions=Dimensiones fila
-report_filter=Filtro de informes
-about=acerca de
-time_since_last_data_update=Tiempo desde la \u00FAltima actualizaci\u00F3n de datos
+column_dimensions=Dimensiones de columnas
+row_dimensions=Dimensiones de filas
+report_filter=Filtro del informe
+about=Acerca de
+time_since_last_data_update=Tiempo desde \u00FAltima actualizaci\u00F3n
 version=Versi\u00F3n
 revision=Revisi\u00F3n
 build_time=En construcci\u00F3n 
@@ -202,13 +202,13 @@ program=Programa
 select_program=Seleccionar programa
 completed_only=S\u00F3lo completado
 events=Eventos
-include_only_completed_events_only=Incluir s\u00F3lo los eventos completados
+include_only_completed_events_only=Incluir s\u00F3lo eventos completos
 comma=Coma
 space=Espacio
 download_data=Descarga de datos
-skip_rounding=Saltar redondeo
+skip_rounding=Evitar redondeo
 write_interpretation=Write interpretation
-embed_in_web_page=Embed in web page
+embed_in_web_page=Insertar en p\u00E1gina web
 favorite_link=Favorite link
 api_link=API link
 rewind_one_period=Retroceder\u00E1 un periodo
@@ -223,16 +223,15 @@ new_=Nuevo
 open=Abrir
 save_as=Guardar como
 get_link=Obtener enlace 
-embed=Embeber
+embed=Insertar
 replace=Reemplazar
-average=Media
+average=Promedio
 all_metrics=Todas las m\u00E9tricas
 reporting_rates_on_time=Estad\u00EDsticas de informes en tiempo real
 actual_reports_on_time=Tasas de comunicaci\u00F3n en tiempo real
 leave_application=Deje la aplicaci\u00F3n
 new_favorite=Favorito nuevo
 save_favorite=Guardar favorito
-delete_favorite=Eliminar favorito
 all_unsaved_changes_will_be_discarded_continue=Se descartar\u00E1n todos los cambios no guardados . \u00BFContinuar?
 existing_favorite_will_be_replaced_continue=favorito existente ser\u00E1 reemplazado . \u00BFContinuar?
 this_favorite_will_be_deleted_continue=Se eliminar\u00E1 este favorito . \u00BFDesea continuar?
