--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -1,135 +1,240 @@
-#Thu Oct 17 13:59:25 BST 2013
-none=Nenhum
-last_5_financial_years=\u00DAltimos 5 anos financeiros
-home=P\u00E1gina Inicial
-show_totals=Mostrar totais
-select_boundaries_and_groups=Seleccione limites e grupos
-last_financial_year=\u00DAltimo ano financeiro
-overwrite_favorite=sobrepor favoritos
-last_bimonth=\u00DAltimos bi-meses
-totals=Totais
-all_data_element_groups=Todos grupos de elementos de dados
-indicators_cannot_be_specified_as_filter=Indicadores n\u00E3o podem ser especificados como filtros
-weeks=Semanas
-select_period_type=Seleccionar tipo de per\u00EDodo
-last_4_quarters=\u00DAltimo trimestre
-data_sets=Dados de conjuntos
-high_to_low=Descendente
-next_year=Pr\u00F3ximo ano
-sort_order=Ordena\u00E7\u00E3o
-write_your_interpretation=Escreva a sua interpreta\u00E7\u00E3o, coment\u00E1rio ou quest\u00E3o
-details=Detalhes
-create=Criar
-last_2_sixmonths=\u00DAltimos 2 seis meses
-hide_empty_rows=Esconder linhas vazias
-dimensions=Dimens\u00E3o
-public_access=Acesso p\u00FAblico
-organisation_unit=Unidade Organizacional
-example8=Clicar Download para guardar tabela de dados para teu computador
-last_4_weeks=\u00DAltimas 4 semanas
-example7=Clicar favoritos para guardar sua tabela para usar posteriormente
-example6=Clicar op\u00E7\u00F5es para esconder sub-totais ou linha vaziaz, ajustar tamanho da fonte  e mais
-display_density=mostrar densidade
-example5=Trabalhando com tabela din\u00E2mica
-data=Dados
-at_least_one_dimension_must_be_specified_as_row_or_column=Pelo menos uma dimens\u00E3o deve ser expecificado com linha ou coluna
-example4=Clicar Actulizar para criar tabela
-example3=Clicar Layout para configurar dimens\u00F5es nas linhas e colunas da tabela
-map=Mapa
-example2=Seleccionar items apartir de qualquer dimens\u00E3o no menu \u00E0 esquerda
-example1=Criando a tabela din\u00E2mica
-select_organisation_unit_groups=Seleccione grupos de unidade organizacional
-last_year=\u00DAltimo ano
-quarters=Trimetres
-select_indicator_group=Seleccionar grupo de indicador
-top_limit=Limite superior
-table_options=Op\u00E7\u00F5es da tabela
-parameters=Par\u00E2metros
-save=Guardar
-at_least_one_period_must_be_specified_as_column_row_or_filter=Deve especificar um periodo como coluna, linha ou filtro
-compact=Compactar
-filter=Filtro
-allow_external_access=Permitir acesso externo
-sixmonths=Seis meses
-table_layout=Layout da tabela
-prev=Anterior
-last_sixmonth=\u00DAltimos 6 meses
-large=Largo
-low_to_high=Ascendente
-update=Actualizar
-rename=Renomear
-sharing_settings=Defini\u00E7\u00F5es de partilha
-column=Column
-graphics=gGr\u00E1ficos
-add_new=Adicionar nova
-show_subtotals=Mostrar sub-totais
-include_regression=Incluir regress\u00E3o
-interpretation=Interpreta\u00E7\u00E3o
-normal=Normal
-selected=Seleccionado
-style=Est\u00EDlo
-reporting_period=Periodo de reporte
-font_size=Tamanho da fonte
-data_element_group_sets_cannot_be_specified_together_with_data_sets=Grupos de elementos de dados n\u00E3o podem ser especificados com dados de conjuntos
-small_=Pequeno
-table=Tabela
-plain_data_sources=Conjunto simples de dados 
-search_for_favorites=Pesquisar por favoritos
-select_all_children=Seleccionar todas crian\u00E7as
-last_week=\u00DAltima semana
-options=Op\u00E7\u00F5es
-select_boundaries_and_levels=Seleccione limites e n\u00EDveis
-next=Pr\u00F3ximo
-share_with_other_people=Partilhar com outros pessoas
-layout=Esquema
-indicators=Indicadores
-hide=Esconder
-available=Dispon\u00EDvel
-search_for_user_groups=Pesquisar por grupos
-years=Anos
-select_data_element_group=Seleccionar grupo de elementos de dados
-delete_=Apagar
-last_6_bimonths=\u00DAltimos 6 bi-meses
-last_5_years=\u00DAltimos 5 anos financeiros
-categories_cannot_be_specified_as_filter=Categorias n\u00E3o podem ser especificadas como filtro
-manage_favorites=Gerir favoritos
-include_cumulative=Incluir somat\u00F3rios
-periods=Per\u00EDodos
-last_12_months=\u00DAltimos 12 meses
-for_standard_reports_only=Apenas para relat\u00F3rios padr\u00E3o
-legend_set=Conjunto de legendas
-financial_years=Anos financeiros
-select_organisation_units=Seleccione unidades organizacionais
-user_organisation_unit_children=Utilizador da unidade organizacinal crian\u00E7a
-overwrite=sobrepor
+dimensions=Dimens\u00F5es
 row=Linha
-download=Descarregar
-categories=Categorias
-last_quarter=\u00DAltimo trimestre
-last_3_months=\u00DAltimos 3 meses
-data_sets_cannot_be_specified_as_filter=Fichas n\u00E3o podem ser utilizadas como filtros
-select_organisation_unit_levels=Seleccione n\u00EDveis de unidade organizacional
-bimonths=Bi-mensal
-prev_year=Ano anterior
+column=Coluna
+filter=Filtro
+table_layout=Disposi\u00E7\u00E3o da tabela
+show_subtotals=Mostrar sub-totais
+hide_empty_rows=Esconder linhas vazias
+display_density=Mostrar densidade
+font_size=Tamanho da fonte
+digit_group_separator=Separador de grupo de d\u00EDgitos
+comfortable=Confort\u00E1vel
+compact=Compacto
+large=Largo
+small_=Pequeno
+normal=Normal
+reporting_period=Per\u00EDodo de reportagem
+organisation_unit=Unidade Organizacional
+organisation_units=Unidades organizacionais
+parent_organisation_unit=Unidade organizacional pai
+user_organisation_unit=Unidade organizacional
+table_options=Op\u00E7\u00F5es da tabela
+create=Criar
+update=Actualizar
+cancel=Cancel
+delete_=Apagar
+save=Guardar
+hide=Esconder
+add_new=Adicionar nova
+manage_favorites=Gerir favoritos
+search_for_favorites=Pesquisar por favoritos
+overwrite_favorite=Sobrepor favoritos
+delete_favorite=Eliminar favoritos
+prev=Anterior
+next=Pr\u00F3ximo
+rename=Renomear
+overwrite=Sobrepor
+share_with_other_people=Partilhar com outras pessoas
+sharing_settings=Defini\u00E7\u00F5es de partilha
+can_view=Pode visualizar
+can_edit_and_view=Pode editar e visualizar
+none=Nenhum
+public_access=Acesso p\u00FAblico
+search_for_user_groups=Pesquisar por grupos
+available=Dispon\u00EDvel
+selected=Seleccionado
+indicators=Indicadores
+all_indicator_groups=Todos grupos de indicadores
+select_indicator_group=Seleccionar grupo de indicador
+data_elements=Elementos de dados
+all_data_element_groups=Todos grupos de elementos de dados
+select_data_element_group=Seleccionar grupo de elementos de dados
+data_sets=Conjunto de dados
+reporting_rates=Taxas de reportagem
+periods=Per\u00EDodos
+select_period_type=Seleccionar tipo de per\u00EDodo
+weeks=Semanas
+last_week=\u00DAltima semana
+last_4_weeks=\u00DAltimas 4 semanas
+last_12_weeks=\u00DAltimas 12 semanas
 months=Meses
 last_month=\u00DAltimo m\u00EAs
-all_indicator_groups=Todos grupos de indicadores
+last_3_months=\u00DAltimos 3 meses
+last_12_months=\u00DAltimos 12 meses
+bimonths=Bi-mensal
+last_bimonth=\u00DAltimos bi-meses
+last_6_bimonths=\u00DAltimos 6 bi-meses
+quarters=Trimestres
+last_quarter=\u00DAltimo trimestre
+last_4_quarters=\u00DAltimos 4 trimestres
+sixmonths=Seis meses
+last_sixmonth=\u00DAltimos 6 meses
+last_2_sixmonths=\u00DAltimos 2 seis meses
+years=Anos
 this_year=Este ano
-can_edit_and_view=Pode editar e ver
-chart=Gr\u00E1fico\t\t
-digit_group_separator=Digitar sepador de grupo
-delete_favorite=Apagar favoritos
+last_year=\u00DAltimo ano
+last_5_years=\u00DAltimos 5 anos
+financial_years=Anos financeiros
+last_financial_year=\u00DAltimo ano financeiro
+last_5_financial_years=\u00DAltimos 5 anos financeiros
+prev_year=Ano anterior
+next_year=Pr\u00F3ximo ano
+select_all_children=Seleccionar todas crian\u00E7as
+table=Tabela
+chart=Gr\u00E1fico
+map=Mapa
+home=P\u00E1gina Inicial
+data=Dados
+categories=Categorias
+style=Estilo
+parameters=Par\u00E2metros
+for_standard_reports_only=Apenas para relat\u00F3rios padr\u00E3o
+please_create_a_table_first=Por favor primeiro criar tabela
+indicators_cannot_be_specified_as_filter=Indicadores n\u00E3o podem ser especificados como filtro de relat\u00F3rio
+categories_cannot_be_specified_as_filter=Categorias n\u00E3o podem ser especificadas como filtro de relat\u00F3rio
+data_element_group_sets_cannot_be_specified_together_with_data_sets=Grupos de elementos de dados n\u00E3o podem ser especificados com conjunto de dados
+at_least_one_dimension_must_be_specified_as_row_or_column=Pelo menos uma dimens\u00E3o deve ser expecificada com linha ou coluna
+at_least_one_period_must_be_specified_as_column_row_or_filter=Deve especificar pelo menos um periodo como coluna, linha ou filtro
+example1=Criando a tabela piv\u00F4
+example2=Seleccionar items a partir de qualquer dimens\u00E3o no menu \u00E0 esquerda
+example3=Clique Disposi\u00E7\u00E3o para configurar dimens\u00F5es nas linhas e colunas da tabela
+example4=Clique Actualizar para criar a sua tabela
+example5=Trabalhando com tabela piv\u00F4
+example6=Clique Op\u00E7\u00F5es para esconder sub-totais ou linha vazia, ajustar tamanho da fonte e mais
+example7=Clicar favoritos para guardar a sua tabela para usar posteriormente
+example8=Clicar Download para guardar tabela de dados para teu computador
+layout=Disposi\u00E7\u00E3o
+options=Op\u00E7\u00F5es
+download=Baixar
 favorites=Favoritos
-parent_organisation_unit=Unidade organizacional pai
-last_12_weeks=\u00DAltimas 12 semanas
-user_organisation_unit_grandchildren=Filhos em terceiro e demais n\u00EDveis da uni. organi.
-please_create_a_table_first=Por favor criar tabela primeiro
-organisation_units=Unidades organizacionais
-user_organisation_unit=Utilizador da unidade organizacional
-cancel=Cancel
-show_hierarchy=Mostrar Hierarquia
-reporting_rates=Taxas de reporte
+include_regression=Incluir regress\u00E3o
+include_cumulative=Incluir cumulativos
+sort_order=Ordena\u00E7\u00E3o
+low_to_high=Ascendente
+high_to_low=Descendente
+top_limit=Limite superior
+plain_data_sources=Fonte de dados simples 
+graphics=Gr\u00E1ficos
+data_sets_cannot_be_specified_as_filter=Conjunto de dados n\u00E3o podem ser utilizados como filtros
 share=Partilhar
-can_view=Pode ver
-comfortable=Confort\u00E1vel
-data_elements=Elementos de dados
+interpretation=Interpreta\u00E7\u00E3o
+write_your_interpretation=Escreva a sua interpreta\u00E7\u00E3o, coment\u00E1rio ou quest\u00E3o
+legend_set=Conjunto de legendas
+select_organisation_units=Seleccione unidades organizacionais
+select_boundaries_and_levels=Seleccione limites e n\u00EDveis
+select_organisation_unit_levels=Seleccione n\u00EDveis de unidade organizacional
+totals=Totais
+details=Detalhes
+select_boundaries_and_groups=Seleccione limites e grupos
+select_organisation_unit_groups=Seleccione grupos de unidade organizacional
+allow_external_access=Permitir acesso externo
+show_hierarchy=Mostrar hierarquia
+all_indicators=Todos indicadores
+all_data_elements=Todos elementos de dados
+daily=Di\u00E1rio
+weekly=Semanal
+monthly=Mensal
+bimonthly=Bi-mensal
+quarterly=Trimestral
+sixmonthly=Semestral
+sixmonthly_april=Semestral a partir de Abril
+yearly=Anual
+financial_oct=Financeiro Outubro
+financial_july=Financeiro Julho
+financial_april=Financeiro Abril
+plugin_config=Configurar Plugin
+default_=Predefinido
+aggregation_type=Tipo de agregac\u00E3o
+count=Contagem
+sum=Soma
+by_data_element=Por elementos de dados
+stddev=Desvio padr\u00E3o
+variance=Vari\u00E2ncia
+go_to_charts=Ir para gr\u00E1ficos
+open_this_table_as_chart=Abrir esta tabela como gr\u00E1fico
+open_last_chart=Abrir o \u00FAltimo gr\u00E1fico
+go_to_maps=Ir para mapas
+open_this_table_as_map=Abrir esta tabela como mapa
+open_last_map=Abrir \u00FAltimo mapa
+show_row_totals=Mostrar totais de linha
+show_col_totals=Mostrar totais de coluna
+assigned_categories=Atribuir categorias
+show_dimension_labels=Mostrar as dimens\u00F5es de etiquetas
+min=M\u00EDn
+max=M\u00E1x
+select_sub_units=Seleccionar sub-unidades
+you_do_not_have_access_to_all_items_in_this_favorite=N\u00E3o tem acesso para todos items neste favorito
+show=Mostrar
+show_col_subtotals=Mostrar sub-totais da coluna
+show_row_subtotals=Mostrar sub-totais de linha
+last_52_weeks=\u00DAltimas 52 semanas
+last_6_months=\u00DAltimos 6 meses
+created_by=Criado por
+initializing=Inicializando
+clear_pivot_table=Limpar tabela piv\u00F4
+this_financial_year=Este ano financeiro
+user_sub_units=Um n\u00EDvel abaixo
+user_sub_x2_units=Dois n\u00EDveis abaixo
+metadata_id_scheme=Meta-data ID scheme
+this_week=Esta semana
+this_quarter=Este trimestre
+this_month=Este m\u00EAs
+this_sixmonth=Este semestre
+this_bimonth=Este bi-m\u00EAs
+excluded_dimensions=Dimens\u00F5es exclu\u00EDdas
+column_dimensions=Dimens\u00F5es da coluna
+row_dimensions=Dimens\u00F5es de linha
+report_filter=Filtro de relat\u00F3rio
+about=Acerca
+time_since_last_data_update=Per\u00EDodo desde a \u00FAltima data de actualiza\u00E7\u00E3o
+version=Vers\u00E3o
+revision=Revis\u00E3o
+build_time=Tempo de Constru\u00E7\u00E3o
+username=Utilizador
+error=Erro
+warning=Aviso
+data_approved_at_level=Dados aprovados no n\u00EDvel
+show_all_data=Mostrar todos os dados
+event_data_items=Dados de items do evento
+program_indicators=Indicadores de programa
+program=Programa
+select_program=Seleccionar o programa
+completed_only=Somente completos
+events=Eventos
+include_only_completed_events_only=Incluir somente eventos completos
+comma=V\u00EDrgula
+space=Espa\u00E7o
+download_data=Baixar dados
+skip_rounding=N\u00E3o arrendondar
+write_interpretation=Escrever interpreta\u00E7\u00E3o
+embed_in_web_page=Incorporar na p\u00E1gina web
+favorite_link=Link do favorito
+api_link=Link do API
+rewind_one_period=Retroceder um per\u00EDodo
+open_favorite=Abrir favorito
+last_updated=\u00DAltima actualiza\u00E7\u00E3o
+name=Nome
+save_favorite_as=Gravar o Favorito como
+you_have_unsaved_changes_discard=Eliminar as altera\u00E7\u00F5es n\u00E3o gravadas
+favorite_name_exists_replace=Substituir o Favorito existente?
+delete_this_favorite=Apagar este Favorito?
+new_=Novo
+open=Abrir
+save_as=Gravar como
+get_link=Obter link
+embed=Incorporar
+replace=Substituir
+average=M\u00E9dia
+all_metrics=Todas m\u00E9tricas
+reporting_rates_on_time=Taxas de reportagem dentro do prazo
+actual_reports_on_time=Taxas de reportagem actuais dentro do prazo
+leave_application=Sair da aplica\u00E7\u00E3o
+new_favorite=Novo favorito
+save_favorite=Gravar o Favorito
+all_unsaved_changes_will_be_discarded_continue=Todas alter\u00E7\u00F5es n\u00E3o gravadas ser\u00E3o descartadas. Continuar?
+existing_favorite_will_be_replaced_continue=O favorito existente ser\u00E1 substituido. Continuar?
+this_favorite_will_be_deleted_continue=Este favorito ser\u00E1 apagado. Continuar?
+untitled=Sem t\u00EDtulo
+title=T\u00EDtulo
+description=Descric\u00E3o
+no_title=Sem t\u00EDtulo
