--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -289,3 +289,9 @@ select_a_locale_to_enter_translations_for=Select a locale to enter translations 
 value=Value
 background=Background
 legend_display_style=Legend display style
+days=Days
+today=Today
+yesterday=Yesterday
+last_3_days=Last 3 days
+last_7_days=Last 7 days
+last_14_days=Last 14 days
