--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -296,3 +296,4 @@ yesterday=Yesterday
 last_3_days=Last 3 days
 last_7_days=Last 7 days
 last_14_days=Last 14 days
+by_data_element=By data element
