--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -121,6 +121,7 @@ data_sets_cannot_be_specified_as_filter=Data sets cannot be specified as filter
 share=Share
 interpretation=interpretation
 write_your_interpretation=Write a comment, question or interpretation
+legend_display_strategy=Legend display strategy
 legend_set=Legend set
 legend_colorize_target=Legend colorize target
 select_organisation_units=Select organisation units
