added hide empty columns option in pivot option window

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -6,6 +6,7 @@ filter=Filter
 table_layout=Table layout
 show_subtotals=Show subtotals
 hide_empty_rows=Hide empty rows
+hide_empty_columns=Hide empty columns
 display_density=Display density
 font_size=Font size
 digit_group_separator=Digit group separator
