--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -62,6 +62,7 @@ months=Months
 last_month=Last month
 last_3_months=Last 3 months
 last_12_months=Last 12 months
+months_this_year=Months this year
 weeks_this_year=Weeks this year
 bimonths_this_year=Bi-months this year
 bimonths=Bi-months
