Updating various translations.

--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -1,3 +1,4 @@
+pivot_tables=Les Tableaux Crois\u00E9s Dynamiques
 dimensions=Dimensions
 row=Ligne
 column=Colonne
@@ -29,7 +30,7 @@ add_new=Ajouter nouveau
 manage_favorites=Gerer favoris
 search_for_favorites=Rechercher favoris
 overwrite_favorite=Ecraser le favori
-delete_favorite=Supprimer favori
+delete_favorite=Supprimer le favori
 prev=Pr\u00E9c
 next=Suivant
 rename=Renommer
@@ -103,6 +104,7 @@ example5=Manipulation du tableau crois\u00E9 dynamique
 example6=Cliquer sur Options pour masquer les sous-totaux ou les lignes vides, ajuster les taille de police ...
 example7=Cliquer sur Favoris pour enregistrer votre tableau pour une utilisation ult\u00E9rieure
 example8=Cliquer sur T\u00E9l\u00E9charger pour enregistrer les donn\u00E9es du tableau sur votre ordinateur
+example9=Le plus de vues favoris
 layout=Disposition
 options=Options
 download=T\u00E9l\u00E9charger
@@ -120,6 +122,7 @@ share=Partager
 interpretation=interpr\u00E9tation
 write_your_interpretation=Ecrire un commentaire, une question ou une interpr\u00E9tation
 legend_set=Jeu de l\u00E9gendes
+legend_colorize_target=Cible couleurs l\u00E9gende
 select_organisation_units=S\u00E9lectionner les unit\u00E9s d'organisation
 select_boundaries_and_levels=S\u00E9lectionner les fronti\u00E8res et les niveaux
 select_organisation_unit_levels=S\u00E9lectionner les niveaux d'unit\u00E9 d'organisation
@@ -168,15 +171,19 @@ show=Afficher
 show_col_subtotals=Afficher sous-totaux colonnes
 show_row_subtotals=Afficher sous-totaux lignes
 last_52_weeks=52 derni\u00E8res semaines
+last_6_months=6 derniers mois
 created_by=Cr\u00E9\u00E9 par
 initializing=Initialisation en cours
 clear_pivot_table=Effacer le tableau crois\u00E9
 this_financial_year=Ann\u00E9e fiscale en cours
+user_sub_units=Sous-unit\u00E9s utilisateur
+user_sub_x2_units=Sous-x2-unit\u00E9s utilisateur
 metadata_id_scheme=Sch\u00E9ma ID m\u00E9ta-donn\u00E9es
 this_week=Cette semaine
 this_quarter=Ce trimestre
 this_month=Ce mois
 this_sixmonth=Ce semestre
+this_bimonth=Ce bi-mestre
 excluded_dimensions=Dimensions exclues
 column_dimensions=Dimensions colonnes
 row_dimensions=Dimensions lignes
@@ -206,3 +213,86 @@ write_interpretation=Write interpretation
 embed_in_web_page=Embed in web page
 favorite_link=Favorite link
 api_link=API link
+rewind_one_period=Revenir une p\u00E9riode en arri\u00E8re
+open_favorite=Ouvrir le favori 
+last_updated=Derni\u00E8re mise \u00E0 jour
+name=Nom
+save_favorite_as=Enregistrer le favori sous 
+you_have_unsaved_changes_discard=Abandonner les modifications non enregistr\u00E9es?
+favorite_name_exists_replace=Remplacer un favori existant?
+delete_this_favorite=Supprimer ce favori?
+new_=Nouveau
+open=Ouvrir
+save_as=Enregistrer sous
+get_link=Copier le lien
+embed=Int\u00E9grer
+replace=Remplacer
+average=Moyenne
+all_metrics=Tous les \u00E9l\u00E9ments
+reporting_rates_on_time=Taux de promptitude
+actual_reports_on_time=Taux de promptitude r\u00E9els
+leave_application=Quitter l'application 
+new_favorite=Nouveau favori
+save_favorite=Enregistrer le favori
+all_unsaved_changes_will_be_discarded_continue=Toute modification non enregistr\u00E9e sera perdue. Continuer\u00A0?
+existing_favorite_will_be_replaced_continue=Le favori existant sera remplac\u00E9. Continuer?
+this_favorite_will_be_deleted_continue=Ce favori sera supprim\u00E9. Continuer?
+untitled=Sans titre
+title=Titre
+description=Description
+unnamed=Sans nom
+no_title=Sans titre
+no_description=Pas de description
+show_favorites=Afficher les favoris
+hide_favorites=Cacher les favoris
+advanced=Avanc\u00E9
+data_value_set=Ensemble de valeurs de donn\u00E9es
+other_formats=Autres formats
+raw_data=Donn\u00E9es brutes
+show_more=Afficher plus
+show_less=Afficher moins
+edit=\u00C9diter
+change=modifier
+public=Publique
+read=Lire
+read_write=Lire/\u00C9crire
+groups=groupes
+group=Groupe
+owner=Propri\u00E9taire
+created=Cr\u00E9\u00E9
+views=Vues
+retrieving_number_of_views=Extrayant le nombre des vues...
+sharing=Partage
+no_current_favorite=Pas de favori actuel
+post_comment=Afficher un commentaire 
+more_comments=Plus des commentaires 
+unlike=Je n'aime plus
+like=J'aime
+people_like_this=peronnes aiment ceci
+people_commented=personnes ont comment\u00E9
+back_to_today=Revenir \u00E0 aujourd'hui
+no_interpretations=Pas d'interpr\u00E9tations
+interpretations=Interpr\u00E9tations
+comment=Commentaire
+people=personnes
+like_this=aiment ceci
+ago=avant
+loading=Chargement en cours
+clear_interpretation=Enlever l'interpr\u00E9tation
+general=G\u00E9n\u00E9ral
+table_title=Titre du tableau
+translate=Traduire
+select_locale=S\u00E9lectionner le param\u00E8tre r\u00E9gional
+no_translation_for_name=Pas de traduction pour nom
+no_translation_for_title=Pas de traduction pour titre
+no_translation_for_description=Pas de traduction pour description
+select_a_locale_to_enter_translations_for=S\u00E9lectionner un param\u00E8tre r\u00E9gional pour saisir les traductions
+value=Valeur
+background=Arri\u00E8re-plan
+legend_display_style=Style d'affichage l\u00E9gende
+days=Jours
+today=Aujourd'hui
+yesterday=Hier
+last_3_days=3 derniers jours
+last_7_days=7 derniers jours
+last_14_days=14 dernier jours
