some styling and added dynamic table update function

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -149,6 +149,7 @@ financial_april=Financial April
 plugin_config=Plugin config
 default_=Default
 aggregation_type=Aggregation type
+display_type=Display type
 count=Count
 sum=Sum
 by_data_element=By data element
