Add transations for interpretation/comment deletion

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -253,6 +253,8 @@ save_favorite=Guardar favorito
 all_unsaved_changes_will_be_discarded_continue=Se descartar\u00E1n todos los cambios no guardados . \u00BFContinuar?
 existing_favorite_will_be_replaced_continue=favorito existente ser\u00E1 reemplazado . \u00BFContinuar?
 this_favorite_will_be_deleted_continue=Se eliminar\u00E1 este favorito . \u00BFDesea continuar?
+this_interpretation_will_be_deleted_continue=Se eliminar\u00E1 esta interpretaci\u00F3n . \u00BFDesea continuar?
+this_comment_will_be_deleted_continue=Se eliminar\u00E1 este comentario . \u00BFDesea continuar?
 untitled=Sin t\u00EDtulo
 title=Ti\u0301tulo
 description=Descripci\u00F3n
