--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -296,3 +296,9 @@ yesterday=Yesterday
 last_3_days=Last 3 days
 last_7_days=Last 7 days
 last_14_days=Last 14 days
+open_selection_as=Open selection as
+open_selection_as_chart=Open selection as chart
+open_selection_as_map=Open selection as map
+period_drill_down_up=Period drill down/up...
+drill_up=Drill up
+drill_down=Drill down
