Translations for legend display strategy

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -290,6 +290,7 @@ select_a_locale_to_enter_translations_for=Select a locale to enter translations 
 value=Value
 background=Background
 legend_display_style=Legend display style
+legend_display_strategy=Legend display strategy
 days=Days
 today=Today
 yesterday=Yesterday
