--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -292,11 +292,18 @@ select_a_locale_to_enter_translations_for=Select a locale to enter translations 
 value=Value
 background=Background
 legend_display_style=Legend display style
+legend_display_strategy=Legend display strategy
 days=Days
 today=Today
 yesterday=Yesterday
 last_3_days=Last 3 days
 last_7_days=Last 7 days
 last_14_days=Last 14 days
+open_selection_as=Open selection as
+open_selection_as_chart=Open selection as chart
+open_selection_as_map=Open selection as map
+period_drill_down_up=Period drill down/up...
+drill_up=Drill up
+drill_down=Drill down
 percent_of_row=% of row
 percent_of_column=% of column
