--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -307,3 +307,8 @@ drill_up=Drill up
 drill_down=Drill down
 percent_of_row=% of row
 percent_of_column=% of column
+legend=Legend
+by_data_item=By data item
+all_data_items=All data items
+apply_legend=Apply legend
+legend_style=Legend style
