changed displayType to numberType

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -149,7 +149,7 @@ financial_april=Financial April
 plugin_config=Plugin config
 default_=Default
 aggregation_type=Aggregation type
-display_type=Display type
+number_type=Number type
 count=Count
 sum=Sum
 by_data_element=By data element
@@ -305,8 +305,8 @@ open_selection_as_map=Open selection as map
 period_drill_down_up=Period drill down/up...
 drill_up=Drill up
 drill_down=Drill down
-percent_of_row=% of row
-percent_of_column=% of column
+percent_of_row=Percentage of row
+percent_of_column=Percentage of column
 legend=Legend
 by_data_item=By data item
 all_data_items=All data items
