D227TEST-50: strings for new relative periods

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -143,9 +143,9 @@ quarterly=Quarterly
 sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
 yearly=Yearly
-financial_oct=Financial October
-financial_july=Financial July
-financial_april=Financial April
+financial_oct=Financial year (Start October)
+financial_july=Financial year (Start July)
+financial_april=Financial year (Start April)
 plugin_config=Plugin config
 default_=Default
 aggregation_type=Aggregation type
@@ -312,3 +312,7 @@ by_data_item=By data item
 all_data_items=All data items
 apply_legend=Apply legend
 legend_style=Legend style
+bimonths_this_year=Bi-months this year
+weeks_this_year=Weeks this year
+quarters_this_year=Quarters this year
+months_this_year=Months this year
