added sticky columns

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -316,3 +316,6 @@ bimonths_this_year=Bi-months this year
 weeks_this_year=Weeks this year
 quarters_this_year=Quarters this year
 months_this_year=Months this year
+experimental=Experimental
+sticky_column_dimension= Sticky column dimension
+sticky_row_dimension= Sticky row dimension (work in progress)
