fixed sticky row dimension label

--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -318,4 +318,4 @@ quarters_this_year=Quarters this year
 months_this_year=Months this year
 experimental=Experimental
 sticky_column_dimension= Sticky column dimension
-sticky_row_dimension= Sticky row dimension (work in progress)
+sticky_row_dimension= Sticky row dimension
