--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -319,3 +319,4 @@ months_this_year=Months this year
 experimental=Experimental
 sticky_column_dimension= Sticky column dimension
 sticky_row_dimension= Sticky row dimension
+table_clipping= Table clipping
