--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -323,3 +323,6 @@ users_access=Users access
 created_by_me=Created by me
 created_by_others=Created by others
 show_all=Show all
+average_sum_org_unit=Average (sum in org unit hierarchy)
+last=Last value
+last_average_org_unit=Last value (average in org unit hierarchy)
