--- a/i18n/i18n_app.properties
+++ b/i18n/i18n_app.properties
@@ -241,6 +241,7 @@ existing_favorite_will_be_replaced_continue=Existing favorite will be replaced. 
 this_favorite_will_be_deleted_continue=This favorite will be deleted. Continue?
 this_interpretation_will_be_deleted_continue=This interpretation will be deleted. Continue?
 this_comment_will_be_deleted_continue=This comment will be deleted. Continue?
+render_large_table=The table you are about to render is very large, are you sure?
 untitled=Untitled
 title=Title
 description=Description
